--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "bootstrap-datepicker": "~1.3.0"
   }
 }
