--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "morgan": "~1.0.0",
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
-    "static-favicon": "~1.0.0"
+    "static-favicon": "~1.0.0",
+    "underscore": "^1.6.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
