--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express": "~4.0.0",
     "express-session": "^1.2.0",
     "jade": "~1.3.0",
-    "mongoose": "^3.8.10",
+    "method-override": "^2.0.2",
+    "mongoose": "^3.8.12",
+    "mongoose-auto-increment": "^3.0.3",
     "morgan": "~1.0.0",
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
